language/move-lang/tests/move_check/naming/duplicate_acquires_list_item.exp
error: 

   ┌── tests/move_check/naming/duplicate_acquires_list_item.move:4:19 ───
   │
 4 │     t0() acquires R, X, R {
   │                         ^ Duplicate acquires item
   ·
 4 │     t0() acquires R, X, R {
   │                   - Previously listed here
   │

error: 

   ┌── tests/move_check/naming/duplicate_acquires_list_item.move:8:19 ───
   │
 8 │     t1() acquires R, X, R, R, R {
   │                         ^ Duplicate acquires item
   ·
 8 │     t1() acquires R, X, R, R, R {
   │                   - Previously listed here
   │

error: 

   ┌── tests/move_check/naming/duplicate_acquires_list_item.move:8:25 ───
   │
 8 │     t1() acquires R, X, R, R, R {
   │                            ^ Duplicate acquires item
   ·
 8 │     t1() acquires R, X, R, R, R {
   │                         - Previously listed here
   │

error: 

   ┌── tests/move_check/naming/duplicate_acquires_list_item.move:8:28 ───
   │
 8 │     t1() acquires R, X, R, R, R {
   │                               ^ Duplicate acquires item
   ·
 8 │     t1() acquires R, X, R, R, R {
   │                            - Previously listed here
   │

